--- a/src/main/resources/static/post-detail.html
+++ b/src/main/resources/static/post-detail.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시글 상세 - OFF THE RECORD</title>
-    <link rel="stylesheet" href="/css/style.css?v=5">
+    <link rel="stylesheet" href="/css/style.css?v=7">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
@@ -49,6 +50,11 @@
         </div>
     </div>
 
+    <div id="lightbox" class="lightbox-modal">
+        <button id="lightboxClose" class="lightbox-close">&times;</button>
+        <img id="lightboxImage" class="lightbox-content" src="" alt="Enlarged Image">
+    </div>
+
     <script src="/js/app.js"></script>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
@@ -75,6 +81,8 @@
 
             // Show comment form
             document.getElementById('commentForm').classList.remove('hidden');
+
+            setupLightbox();
         }
 
         async function loadPost() {
@@ -98,11 +106,11 @@
                     </div>
                 </div>
                 <h1 class="post-detail-title">${escapeHtml(post.title)}</h1>
-                ${post.imageUrl ? `<div class="post-detail-image"><img src="${post.imageUrl}" alt="Post Image"></div>` : ''}
+                ${post.imageUrl ? `<div class="post-detail-image"><img src="${post.imageUrl}" alt="Post Image" onclick="openLightbox('${post.imageUrl}')"></div>` : ''}
                 <div class="post-detail-content">${escapeHtml(post.content)}</div>
                 <div class="card-footer">
-                    <span>👁️ 조회수 ${post.viewCount}</span>
-                    <span>💬 댓글 ${post.commentCount}</span>
+                    <span><i class="fas fa-eye"></i> ${formatNumber(post.viewCount)}</span>
+                    <span><i class="fas fa-comment-dots"></i> ${formatNumber(post.commentCount)}</span>
                 </div>
             `;
 
@@ -175,6 +183,44 @@
                 }
             }
         });
+
+        // Lightbox Functions
+        function setupLightbox() {
+            const lightbox = document.getElementById('lightbox');
+            const closeBtn = document.getElementById('lightboxClose');
+
+            closeBtn.addEventListener('click', closeLightbox);
+            lightbox.addEventListener('click', (e) => {
+                if (e.target === lightbox) {
+                    closeLightbox();
+                }
+            });
+
+            // Escape key to close
+            document.addEventListener('keydown', (e) => {
+                if (e.key === 'Escape' && lightbox.classList.contains('active')) {
+                    closeLightbox();
+                }
+            });
+        }
+
+        function openLightbox(imageUrl) {
+            const lightbox = document.getElementById('lightbox');
+            const lightboxImage = document.getElementById('lightboxImage');
+
+            lightboxImage.src = imageUrl;
+            lightbox.classList.add('active');
+            document.body.style.overflow = 'hidden'; // Prevent scrolling
+        }
+
+        function closeLightbox() {
+            const lightbox = document.getElementById('lightbox');
+            lightbox.classList.remove('active');
+            document.body.style.overflow = ''; // Restore scrolling
+        }
+
+        // Expose openLightbox to global scope for inline onclick
+        window.openLightbox = openLightbox;
 
         init();
     </script>
