--- a/src/main/resources/static/post-detail.html
+++ b/src/main/resources/static/post-detail.html
@@ -106,7 +106,11 @@
                     </div>
                 </div>
                 <h1 class="post-detail-title">${escapeHtml(post.title)}</h1>
-                ${post.imageUrl ? `<div class="post-detail-image"><img src="${post.imageUrl}" alt="Post Image" onclick="openLightbox('${post.imageUrl}')"></div>` : ''}
+                <div class="post-detail-images">
+                    ${post.imageUrl ? `<img src="${post.imageUrl}" alt="Post Image 1" onclick="openLightbox('${post.imageUrl}')">` : ''}
+                    ${post.imageUrl2 ? `<img src="${post.imageUrl2}" alt="Post Image 2" onclick="openLightbox('${post.imageUrl2}')">` : ''}
+                    ${post.imageUrl3 ? `<img src="${post.imageUrl3}" alt="Post Image 3" onclick="openLightbox('${post.imageUrl3}')">` : ''}
+                </div>
                 <div class="post-detail-content">${escapeHtml(post.content)}</div>
                 <div class="card-footer">
                     <span><i class="fas fa-eye"></i> ${formatNumber(post.viewCount)}</span>
