--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -19,8 +19,8 @@
         <form id="signupForm">
             <div class="form-group">
                 <label class="form-label" for="username">아이디</label>
-                <input type="text" id="username" class="form-input" placeholder="4-50자 사이의 아이디를 입력하세요" required
-                    minlength="4" maxlength="50">
+                <input type="text" id="username" class="form-input" placeholder="6-30자 영문 대소문자 및 숫자" required
+                    minlength="6" maxlength="30" pattern="^[a-zA-Z0-9]+$">
             </div>
 
             <div class="form-group">
@@ -30,9 +30,15 @@
             </div>
 
             <div class="form-group">
+                <label class="form-label" for="confirmPassword">비밀번호 확인</label>
+                <input type="password" id="confirmPassword" class="form-input" placeholder="비밀번호를 다시 입력하세요" required
+                    minlength="6">
+            </div>
+
+            <div class="form-group">
                 <label class="form-label" for="nickname">별명</label>
-                <input type="text" id="nickname" class="form-input" placeholder="2-50자 사이의 별명을 입력하세요" required
-                    minlength="2" maxlength="50">
+                <input type="text" id="nickname" class="form-input" placeholder="2-10자 사이의 별명을 입력하세요 변경불가" required
+                    minlength="2" maxlength="10">
             </div>
 
             <button type="submit" class="btn btn-primary" style="width: 100%;">
@@ -52,7 +58,26 @@
 
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
+            const confirmPassword = document.getElementById('confirmPassword').value;
             const nickname = document.getElementById('nickname').value;
+
+            // Username validation (Alphanumeric 6-30)
+            const usernameRegex = /^[a-zA-Z0-9]{6,30}$/;
+            if (!usernameRegex.test(username)) {
+                showError('아이디는 6-30자의 영문 대소문자 및 숫자만 가능합니다');
+                return;
+            }
+
+            // Nickname validation (2-10)
+            if (nickname.length < 2 || nickname.length > 10) {
+                showError('별명은 2-10자 사이여야 합니다');
+                return;
+            }
+
+            if (password !== confirmPassword) {
+                showError('비밀번호가 일치하지 않습니다');
+                return;
+            }
 
             const result = await signup(username, password, nickname);
 
