--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -27,8 +27,8 @@
                 <input type="password" id="password" class="form-input" placeholder="비밀번호를 입력하세요" required>
             </div>
 
-            <button type="submit" class="btn btn-primary" style="width: 100%;">
-                로그인
+            <button type="submit" class="btn-cool" style="width: 100%;">
+                LOGIN
             </button>
         </form>
 
