리다이렉트

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,7 +32,8 @@
         <!-- Board Tabs -->
         <div class="board-tabs">
             <button class="board-tab active" onclick="switchBoard('free')">자유게시판</button>
-            <button class="board-tab" onclick="switchBoard('qna')">Q&A게시판</button>
+            <button class="board-tab" onclick="switchBoard('anonymous')">익명게시판</button>
+            <button class="board-tab" onclick="switchBoard('jobs')">구인구직</button>
         </div>
 
         <div id="postsContainer" class="mobile-post-list">
