--- a/src/main/resources/static/post-form.html
+++ b/src/main/resources/static/post-form.html
@@ -167,11 +167,11 @@
                 if (isEditMode) {
                     await updatePostCustom(postId, title, content, preservedImages, selectedFiles);
                     showSuccess('게시글이 수정되었습니다');
-                    window.location.href = `/post-detail.html?id=${postId}`;
+                    window.location.replace(`/post-detail.html?id=${postId}`);
                 } else {
                     const result = await createPostCustom(title, content, '', selectedFiles, boardId);
                     showSuccess('게시글이 작성되었습니다');
-                    window.location.href = `/post-detail.html?id=${result.id}`;
+                    window.location.replace(`/post-detail.html?id=${result.id}`);
                 }
             } catch (error) {
                 showError('게시글 저장에 실패했습니다');
